@@ -510,6 +510,22 @@ class RangerController {
     let path = urlObj.pathname;
     path = path ? path : '';
     let q = urlObj.query;
+
+    let duplicateAttr = (query) => {
+      return Object.keys(query).find(
+        (element) => { return typeof query[element] === 'object'; }
+      );
+    };
+    // We disallow query strings containing multiple attribute-value pairs
+    // for the same attribute. In most places our code expects attribute
+    // values to be strings and breaks if the value is an array.
+    // We might opt for more granular consideration later.
+    let dup = duplicateAttr(q);
+    if (dup) {
+      return this.errorResponse(this.response, 422,
+        `Invalid request: multiple values for attribute '${dup}'`);
+    }
+
     q[RANGER_PROXY_URL_KEY] = proxyURL;
 
     let requestFormat;
